tweaks to the UI and threading

--- a/dataframe_GlobalTodo.html
+++ b/dataframe_GlobalTodo.html
@@ -20,51 +20,9 @@
     <tr>
       <th>0</th>
       <td>1</td>
-      <td>Comment</td>
-      <td>1</td>
-      <td></td>
-      <td></td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>1</th>
-      <td>2</td>
-      <td>Comment</td>
-      <td>1</td>
-      <td></td>
-      <td></td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>2</th>
-      <td>1</td>
-      <td>Like</td>
-      <td>1</td>
-      <td></td>
-      <td></td>
-      <td>suggested donga</td>
-      <td>2310375082848242941</td>
-      <td>472410</td>
-      <td>donga</td>
-      <td>Gaetano la Rosa</td>
-      <td>MustLike</td>
-    </tr>
-    <tr>
-      <th>3</th>
-      <td>1</td>
       <td>Follow</td>
       <td>2</td>
-      <td>2020-05-16 21:58:56.748606</td>
+      <td>2020-05-21 15:44:41.277504</td>
       <td></td>
       <td>rolex</td>
       <td>2309731813996298532</td>
@@ -74,144 +32,130 @@
       <td>False</td>
     </tr>
     <tr>
-      <th>4</th>
-      <td>1</td>
+      <th>1</th>
+      <td>2</td>
       <td>Follow</td>
       <td>2</td>
-      <td>2020-05-16 22:11:46.404666</td>
+      <td>2020-05-21 15:45:06.859592</td>
+      <td></td>
+      <td>omega</td>
+      <td>2308302468306393186</td>
+      <td>19946737339</td>
+      <td>dyt.duyguonurpenekli</td>
+      <td>Diyetisyen Duygu ONUR PENEKLİ</td>
+      <td>False</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>3</td>
+      <td>Follow</td>
+      <td>2</td>
+      <td>2020-05-21 15:45:36.309356</td>
+      <td></td>
+      <td>swatch</td>
+      <td>2303262255800519815</td>
+      <td>8644132758</td>
+      <td>polish.lab.rat</td>
+      <td>All The Nail Polish Things</td>
+      <td>False</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>4</td>
+      <td>Follow</td>
+      <td>2</td>
+      <td>2020-05-21 15:45:59.668547</td>
       <td></td>
       <td>newyork</td>
-      <td>2310439241630426481</td>
-      <td>247818969</td>
-      <td>katealuz</td>
-      <td>Kat Torres</td>
+      <td>2310693430329377055</td>
+      <td>351233353</td>
+      <td>lindshubbs</td>
+      <td>Lindsay Hubbard</td>
+      <td>False</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>5</td>
+      <td>Follow</td>
+      <td>2</td>
+      <td>2020-05-21 15:46:21.132177</td>
+      <td></td>
+      <td>london</td>
+      <td>2310662786584057053</td>
+      <td>19628118</td>
+      <td>eyproducer</td>
+      <td>E Y 👑</td>
       <td>False</td>
     </tr>
     <tr>
       <th>5</th>
-      <td>1</td>
+      <td>6</td>
       <td>Follow</td>
       <td>2</td>
-      <td>2020-05-16 22:12:10.000334</td>
+      <td>2020-05-21 15:46:48.576504</td>
       <td></td>
-      <td>suggested riyadh7611</td>
-      <td>2304525289634372253</td>
-      <td>34714595128</td>
-      <td>riyadh7611</td>
-      <td>Riyadh</td>
-      <td>MustFollow</td>
+      <td>paris</td>
+      <td>2310618416853121130</td>
+      <td>1621035881</td>
+      <td>martunis_ronaldo</td>
+      <td>𝙈𝙖𝙧𝙩𝙪𝙣𝙞𝙨 𝙍𝙤𝙣𝙖𝙡𝙙𝙤</td>
+      <td>False</td>
     </tr>
     <tr>
       <th>6</th>
+      <td>7</td>
+      <td>Follow</td>
       <td>2</td>
-      <td>Like</td>
-      <td>1</td>
+      <td>2020-05-21 15:47:19.076062</td>
       <td></td>
-      <td></td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
+      <td>stockholm</td>
+      <td>2310471077087622921</td>
+      <td>3409113</td>
+      <td>lindamariie</td>
+      <td>LINDA-MARIE NILSSON</td>
+      <td>False</td>
     </tr>
     <tr>
       <th>7</th>
-      <td>3</td>
-      <td>Like</td>
-      <td>1</td>
-      <td></td>
-      <td></td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>8</th>
-      <td>3</td>
-      <td>Comment</td>
-      <td>1</td>
-      <td></td>
-      <td></td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>9</th>
-      <td>1</td>
-      <td>UnFollow</td>
-      <td>1</td>
-      <td></td>
-      <td></td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>10</th>
-      <td>2</td>
+      <td>8</td>
       <td>Follow</td>
       <td>2</td>
-      <td>2020-05-16 22:12:35.631348</td>
+      <td>2020-05-21 15:47:44.356380</td>
       <td></td>
-      <td>rolex</td>
-      <td>2309166472944828456</td>
-      <td>15863926239</td>
-      <td>qiaocheng199r</td>
-      <td>Gwendolyn</td>
-      <td>False</td>
-    </tr>
-    <tr>
-      <th>11</th>
-      <td>2</td>
-      <td>Follow</td>
-      <td>2</td>
-      <td>2020-05-16 22:13:03.144043</td>
-      <td></td>
-      <td>london</td>
-      <td>2310435496680273733</td>
-      <td>327201197</td>
-      <td>mrcalumbest</td>
-      <td>Calum Milan Best</td>
-      <td>False</td>
-    </tr>
-    <tr>
-      <th>12</th>
-      <td>2</td>
-      <td>Follow</td>
-      <td>2</td>
-      <td>2020-05-16 22:13:24.815315</td>
-      <td></td>
-      <td>suggested anti_symposium</td>
-      <td>2308927071566562903</td>
-      <td>34499937880</td>
-      <td>anti_symposium</td>
-      <td>Anti-symposium</td>
+      <td>suggested caredmont</td>
+      <td>2310605483691503590</td>
+      <td>35774425016</td>
+      <td>caredmont</td>
+      <td>Carmen Rodriguez</td>
       <td>MustFollow</td>
     </tr>
     <tr>
-      <th>13</th>
-      <td>4</td>
-      <td>Comment</td>
-      <td>1</td>
+      <th>8</th>
+      <td>9</td>
+      <td>Follow</td>
+      <td>2</td>
+      <td>2020-05-21 15:48:12.686169</td>
       <td></td>
+      <td>suggested joker_soufiane</td>
+      <td>2308419227469691245</td>
+      <td>31220700541</td>
+      <td>joker_soufiane</td>
+      <td>Soufiane Jo Ker</td>
+      <td>MustFollow</td>
+    </tr>
+    <tr>
+      <th>9</th>
+      <td>10</td>
+      <td>Follow</td>
+      <td>2</td>
+      <td>2020-05-21 15:48:42.771083</td>
       <td></td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
+      <td>suggested kaka</td>
+      <td>2308178460521867246</td>
+      <td>6643170</td>
+      <td>kaka</td>
+      <td>Kaká</td>
+      <td>MustFollow</td>
     </tr>
   </tbody>
 </table>
