--- a/dataframe_GlobalTodo.html
+++ b/dataframe_GlobalTodo.html
@@ -22,13 +22,13 @@
       <td>1</td>
       <td>Follow</td>
       <td>2</td>
-      <td>2020-05-21 15:44:41.277504</td>
+      <td>2020-05-31 02:55:25.064640</td>
       <td></td>
       <td>rolex</td>
-      <td>2309731813996298532</td>
-      <td>7552146593</td>
-      <td>exitwatch</td>
-      <td>Ed | Creator of #exitwatch</td>
+      <td>2320242007156649473</td>
+      <td>1086725875</td>
+      <td>arashtahami</td>
+      <td>Arash Tahami</td>
       <td>False</td>
     </tr>
     <tr>
@@ -36,13 +36,13 @@
       <td>2</td>
       <td>Follow</td>
       <td>2</td>
-      <td>2020-05-21 15:45:06.859592</td>
+      <td>2020-05-31 02:55:58.940579</td>
       <td></td>
       <td>omega</td>
-      <td>2308302468306393186</td>
-      <td>19946737339</td>
-      <td>dyt.duyguonurpenekli</td>
-      <td>Diyetisyen Duygu ONUR PENEKLİ</td>
+      <td>2319801133572148922</td>
+      <td>1716145902</td>
+      <td>watch_ors</td>
+      <td></td>
       <td>False</td>
     </tr>
     <tr>
@@ -50,13 +50,13 @@
       <td>3</td>
       <td>Follow</td>
       <td>2</td>
-      <td>2020-05-21 15:45:36.309356</td>
+      <td>2020-05-31 02:57:04.305217</td>
       <td></td>
       <td>swatch</td>
-      <td>2303262255800519815</td>
-      <td>8644132758</td>
-      <td>polish.lab.rat</td>
-      <td>All The Nail Polish Things</td>
+      <td>2319888398028333914</td>
+      <td>7744501969</td>
+      <td>grzegorzjasica</td>
+      <td>Grzegorz Jasica</td>
       <td>False</td>
     </tr>
     <tr>
@@ -64,13 +64,13 @@
       <td>4</td>
       <td>Follow</td>
       <td>2</td>
-      <td>2020-05-21 15:45:59.668547</td>
+      <td>2020-05-31 02:57:33.052572</td>
       <td></td>
       <td>newyork</td>
-      <td>2310693430329377055</td>
-      <td>351233353</td>
-      <td>lindshubbs</td>
-      <td>Lindsay Hubbard</td>
+      <td>2320728341580481796</td>
+      <td>11430034</td>
+      <td>kleinfeldbridal</td>
+      <td>Kleinfeld Bridal</td>
       <td>False</td>
     </tr>
     <tr>
@@ -78,13 +78,13 @@
       <td>5</td>
       <td>Follow</td>
       <td>2</td>
-      <td>2020-05-21 15:46:21.132177</td>
+      <td>2020-05-31 02:57:58.855067</td>
       <td></td>
       <td>london</td>
-      <td>2310662786584057053</td>
-      <td>19628118</td>
-      <td>eyproducer</td>
-      <td>E Y 👑</td>
+      <td>2320741692755205560</td>
+      <td>1471463785</td>
+      <td>433nl</td>
+      <td>433NL</td>
       <td>False</td>
     </tr>
     <tr>
@@ -92,13 +92,13 @@
       <td>6</td>
       <td>Follow</td>
       <td>2</td>
-      <td>2020-05-21 15:46:48.576504</td>
+      <td>2020-05-31 02:58:27.849161</td>
       <td></td>
       <td>paris</td>
-      <td>2310618416853121130</td>
-      <td>1621035881</td>
-      <td>martunis_ronaldo</td>
-      <td>𝙈𝙖𝙧𝙩𝙪𝙣𝙞𝙨 𝙍𝙤𝙣𝙖𝙡𝙙𝙤</td>
+      <td>2320692322140278394</td>
+      <td>349855584</td>
+      <td>thegreatplanet</td>
+      <td>The Great Planet ™</td>
       <td>False</td>
     </tr>
     <tr>
@@ -106,13 +106,13 @@
       <td>7</td>
       <td>Follow</td>
       <td>2</td>
-      <td>2020-05-21 15:47:19.076062</td>
+      <td>2020-05-31 02:58:57.527963</td>
       <td></td>
       <td>stockholm</td>
-      <td>2310471077087622921</td>
-      <td>3409113</td>
-      <td>lindamariie</td>
-      <td>LINDA-MARIE NILSSON</td>
+      <td>2320633114833415549</td>
+      <td>342175866</td>
+      <td>cajsawessberg</td>
+      <td>Cajsa Wessberg</td>
       <td>False</td>
     </tr>
     <tr>
@@ -120,13 +120,13 @@
       <td>8</td>
       <td>Follow</td>
       <td>2</td>
-      <td>2020-05-21 15:47:44.356380</td>
+      <td>2020-05-31 02:59:24.663688</td>
       <td></td>
-      <td>suggested caredmont</td>
-      <td>2310605483691503590</td>
-      <td>35774425016</td>
-      <td>caredmont</td>
-      <td>Carmen Rodriguez</td>
+      <td>suggested chawlar530</td>
+      <td>2303716049420770983</td>
+      <td>35074414929</td>
+      <td>chawlar530</td>
+      <td>Rakesh Chawla</td>
       <td>MustFollow</td>
     </tr>
     <tr>
@@ -134,13 +134,13 @@
       <td>9</td>
       <td>Follow</td>
       <td>2</td>
-      <td>2020-05-21 15:48:12.686169</td>
+      <td>2020-05-31 02:59:47.398485</td>
       <td></td>
-      <td>suggested joker_soufiane</td>
-      <td>2308419227469691245</td>
-      <td>31220700541</td>
-      <td>joker_soufiane</td>
-      <td>Soufiane Jo Ker</td>
+      <td>suggested mariagonzalez098765</td>
+      <td>2317885005114442858</td>
+      <td>36124628666</td>
+      <td>mariagonzalez098765</td>
+      <td>Mariagonzalez</td>
       <td>MustFollow</td>
     </tr>
     <tr>
@@ -148,13 +148,13 @@
       <td>10</td>
       <td>Follow</td>
       <td>2</td>
-      <td>2020-05-21 15:48:42.771083</td>
+      <td>2020-05-31 03:00:17.295308</td>
       <td></td>
-      <td>suggested kaka</td>
-      <td>2308178460521867246</td>
-      <td>6643170</td>
-      <td>kaka</td>
-      <td>Kaká</td>
+      <td>suggested scootsandroots</td>
+      <td>2320691368839762567</td>
+      <td>35899126869</td>
+      <td>scootsandroots</td>
+      <td>Scoots &amp; Roots</td>
       <td>MustFollow</td>
     </tr>
   </tbody>
